welcome.lessons.welcome.array.indexof.value.IndexOfValue.scala.error
indexOfValue:3: error: not found: value lookingFor
		if(lookingFor(nums(c)) == value) {
                   ^indexOfValue:6: error: value lenght is not a member of Array[Int]
		else if(c == nums.lenght) {
                                  ^indexOfValue:2: error: type mismatch;
 found   : Unit
 required: Int
	for(c <- 0 to nums.length) {
              ^